bad/redefine_builtin_function_readString.example_compiler_output
ERROR
[1mbad/redefine_builtin_function_readString.lat:2:1: [1;31merror: [0;1mcannot define function having the same name as the predefined function `readString`[m
string readString() { return ":p"; }
[1;32m^[m
